examples/lexer/bad/05_invalid_operator.sg
// Ошибка: недопустимый оператор
fn test_operator() -> bool {
    let x:int = 5;
    let y:int = 10;
    let result:bool = x <> y;  // недопустимый оператор <>
    return result;
}
